infrastructure/kubernetes/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: marabet-ai
    environment: staging
    name: marabet-staging
  name: marabet-staging
